name:                no-rts
version:             0.1.0.0
author:              Greg Horn
maintainer:          gregmainland@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Lol
  build-depends:       base >=4.8 && <5
  hs-source-dirs:      src
  default-language:    Haskell2010
  extra-libraries:     HSrts-ghc7.10.3
